--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "yup": "^0.32.8"
   },
   "devDependencies": {
-    "@tailwindcss/custom-forms": "^0.2.1",
+    "@tailwindcss/forms": "^0.2.1",
     "@types/gtag.js": "^0.0.4",
     "prettier": "2.3.2"
   }
